--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.47.0",
 		"vite": "^7.2.2"
+	},
+	"dependencies": {
+		"pocketbase": "^0.26.5",
+		"tailwind-merge": "^3.4.0"
 	}
 }
