--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"vite": "^7.2.2"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.561.0",
 		"pocketbase": "^0.26.5",
 		"tailwind-merge": "^3.4.0"
 	}
