--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"svelte": "^5.43.8",
 		"svelte-check": "^4.3.4",
+		"svelte-motion": "^0.12.2",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.47.0",
