--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.3",
 	"type": "module",
 	"engines": {
-		"node": "^20.19 || ^22.12 || >=24"
+		"node": "^22.12"
 	},
 	"scripts": {
 		"dev": "vite dev",
