--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
 	"private": true,
 	"version": "0.0.3",
 	"type": "module",
-	"engines": {
-		"node": "^22.12"
-	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -46,6 +43,7 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.561.0",
 		"pocketbase": "^0.26.5",
-		"tailwind-merge": "^3.4.0"
+		"tailwind-merge": "^3.4.0",
+		"cookie": ">=0.7.0"
 	}
 }
