--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.561.0",
 		"pocketbase": "^0.26.5",
-		"tailwind-merge": "^3.4.0",
-		"cookie": ">=0.7.0"
+		"tailwind-merge": "^3.4.0"
 	}
 }
